--- a/index.html
+++ b/index.html
@@ -6,156 +6,141 @@
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: #f7f9fb;
-      color: #212121;
+      background: #f5f7fa;
+      color: #263238;
+      padding: 0 0 60px 0;
       margin: 0;
-      padding: 0;
     }
-    .charter-container {
-      max-width: 980px;
+    .canvas-container {
+      max-width: 1000px;
+      margin: 32px auto;
       background: #fff;
-      margin: 4vh auto;
       border-radius: 18px;
-      box-shadow: 0 4px 24px 0 rgba(40,54,72,0.09);
-      padding: 40px 48px 36px 48px;
+      box-shadow: 0 4px 24px 0 rgba(30,50,84,0.11);
+      padding: 40px 32px 28px 32px;
     }
-    .charter-title {
-      font-size: 2.4rem;
-      color: #213241;
-      margin-bottom: 8px;
-      font-weight: 700;
-      letter-spacing: -0.03em;
+    .canvas-title {
+      font-size: 2.3rem;
+      font-weight: bold;
+      color: #244c36;
+      letter-spacing: -0.025em;
+      margin-bottom: 4px;
     }
-    .charter-subheading {
-      font-size: 1.12rem;
-      color: #2d5e4a;
+    .canvas-tagline {
+      font-size: 1.13rem;
+      color: #386d50;
       letter-spacing: 0.01em;
-      margin-bottom: 30px;
-      margin-top: 2px;
+      margin-bottom: 24px;
     }
-    .charter-table {
-      width: 100%;
-      border-collapse: separate;
-      border-spacing: 0 16px;
-      margin-top: 12px;
+    .charter-card {
       margin-bottom: 28px;
-    }
-    .charter-table th {
-      text-align: left;
-      color: #156d4e;
-      font-size: 1.14rem;
-      font-weight: 600;
-      padding: 8px 22px 8px 8px;
-      background: #e1f1e2;
-      border-radius: 7px 7px 0 0;
-    }
-    .charter-table td {
-      background: #f3f6fa;
-      font-size: 1.04rem;
-      padding: 13px 22px 13px 8px;
-      border-radius: 0 0 8px 8px;
-      vertical-align: top;
-      border-left: 4px solid #d4e3dc;
+      border-left: 7px solid #35af69;
+      background: #f7fbf8;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px 0 rgba(70,98,100,0.03);
+      padding: 22px 24px 18px 22px;
+      overflow: hidden;
     }
     .charter-label {
-      color: #247143;
-      font-size: 1.05rem;
-      font-weight: 600;
-      margin-bottom: 2px;
+      font-size: 1.23rem;
+      font-weight: 700;
+      color: #207753;
+      margin-bottom: 6px;
+      letter-spacing: -0.01em;
+      display: block;
     }
-    .panel-note {
-      background: #fbeaaf;
-      color: #634400;
-      font-style: italic;
-      border-left: 3px solid #ffe287;
-      padding: 8px 14px;
+    .charter-main {
+      font-size: 1.06rem;
+      margin-bottom: 8px;
+      color: #263238;
+      line-height: 1.62;
+    }
+    .panel-recommend {
+      font-size: 0.98rem;
+      background: #fffaeb;
+      color: #665607;
+      border-left: 4px solid #ffe082;
       border-radius: 4px;
-      margin-top: 7px;
-      margin-bottom: 0;
+      padding: 8px 14px;
+      margin-top: 3px;
     }
     .footer-brand {
+      color: #86a391;
+      font-size: 0.98rem;
       margin-top: 30px;
-      font-size: 0.95rem;
-      color: #888;
       text-align: left;
       letter-spacing: 0.01em;
     }
     @media (max-width: 650px) {
-      .charter-container {
-        padding: 2vw 2vw;
+      .canvas-container {
+        padding: 2vw 1vw;
       }
-      .charter-title {font-size: 1.4rem;}
-      .charter-subheading {font-size: 0.94rem;}
+      .canvas-title {font-size: 1.3rem;}
+      .canvas-tagline {font-size: 0.93rem;}
     }
   </style>
 </head>
 <body>
-  <div class="charter-container">
-    <div class="charter-title">Starbucks Executive Team Charter Canvas</div>
-    <div class="charter-subheading">Clarity | Trust | Accountability | Performance | Growth</div>
-    <table class="charter-table">
-      <tr>
-        <th>Charter Element</th>
-        <th>Team Agreement & Mechanisms</th>
-        <th>Panel Guidance</th>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Purpose & Values</span></td>
-        <td>
-          - Unified team vision and purpose statement<br>
-          - Core values: Curiosity, Responsibility, Care, Customer-first mindset<br>
-          - All major decisions referenced to purpose
-        </td>
-        <td><span class="panel-note">Align every project and discussion with the charter. Revisit purpose quarterly to keep it active and evolving.</span></td>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Roles & Expectations</span></td>
-        <td>
-          - Explicit role clarity and up-to-date responsibility map<br>
-          - Mutual expectations and participation standards<br>
-          - Personal accountability for full-team and cross-team initiatives
-        </td>
-        <td><span class="panel-note">Begin each cycle by reviewing/renewing mutual expectations—both 'hard' deliverables and soft contributions (feedback, coaching).</span></td>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Trust & Psychological Safety</span></td>
-        <td>
-          - "No surprises" commitment to transparent information sharing<br>
-          - Safe challenge and constructive conflict as positive norms<br>
-          - Peer support in high-stakes decisions and difficult conversations
-        </td>
-        <td><span class="panel-note">Monitor team energy and safety monthly. Use pulse surveys and regular check-ins on team health.</span></td>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Accountability</span></td>
-        <td>
-          - Shared team metrics with public review cadence<br>
-          - Timely follow-up on commitments and misses<br>
-          - Blameless system correction as default response
-        </td>
-        <td><span class="panel-note">Distinguish between accountability to outcomes (goals) and to each other (team behaviors). Treat misses as learning triggers, not blame.</span></td>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Collaboration & Feedback</span></td>
-        <td>
-          - Scheduled cross-functional workshops and regular reflection sessions<br>
-          - Real-time, actionable feedback both peer-to-peer and as a group<br>
-          - Open invitation to coach or be coached at any level
-        </td>
-        <td><span class="panel-note">Systematize reflection: short learning reviews after milestones and at least one deep retrospective per quarter.</span></td>
-      </tr>
-      <tr>
-        <td><span class="charter-label">Decision-Making</span></td>
-        <td>
-          - Transparent criteria for decision rights and escalation<br>
-          - Documented, reviewed decision log<br>
-          - Fast, iterative experimentation encouraged when uncertainty is high
-        </td>
-        <td><span class="panel-note">Create agreed guardrails for which decisions need full consensus vs. empowered delegation within roles.</span></td>
-      </tr>
-    </table>
+  <div class="canvas-container">
+    <div class="canvas-title">Starbucks Executive Team Charter Canvas</div>
+    <div class="canvas-tagline">Clarity, Trust, Accountability, Performance, Growth</div>
+    
+    <div class="charter-card">
+      <span class="charter-label">Purpose & Values</span>
+      <div class="charter-main">
+        Unified team vision and purpose, core values (Curiosity, Responsibility, Care, Customer focus), and commitment to tie all decisions and actions to this charter.
+      </div>
+      <div class="panel-recommend">
+        Panel: Make the purpose statement a “living” section—review and refresh quarterly as the team and context evolve.
+      </div>
+    </div>
+    <div class="charter-card">
+      <span class="charter-label">Roles & Expectations</span>
+      <div class="charter-main">
+        Explicit definition of team member roles, responsibility map, mutual expectations, and active ownership of both team and cross-team goals.
+      </div>
+      <div class="panel-recommend">
+        Panel: Set up a regular cadence (e.g. kickoff of each cycle/quarter) to clarify and renew team and role expectations.
+      </div>
+    </div>
+    <div class="charter-card">
+      <span class="charter-label">Trust & Psychological Safety</span>
+      <div class="charter-main">
+        No-surprises transparency, constructive challenge as a norm, and explicit peer support in high-stakes or difficult conversations.
+      </div>
+      <div class="panel-recommend">
+        Panel: Use short pulse surveys and health checks monthly to assure trust and surface safety concerns early.
+      </div>
+    </div>
+    <div class="charter-card">
+      <span class="charter-label">Accountability</span>
+      <div class="charter-main">
+        Team-owned metrics, public commitments, regular follow-up, blameless correction of slip-ups, and a focus on collective learning and improvement.
+      </div>
+      <div class="panel-recommend">
+        Panel: Separate “accountability to outcomes” from “accountability to team behaviors.” Treat misses as opportunities to learn together.
+      </div>
+    </div>
+    <div class="charter-card">
+      <span class="charter-label">Collaboration & Feedback</span>
+      <div class="charter-main">
+        Cross-functional workshops, scheduled reflections, peer-to-peer and group feedback sessions, with open invitation to coach or mentor.
+      </div>
+      <div class="panel-recommend">
+        Panel: Embed a lightweight review (e.g. quick learning review post-milestone, deep quarterly retrospective) into the rhythm.
+      </div>
+    </div>
+    <div class="charter-card">
+      <span class="charter-label">Decision-Making</span>
+      <div class="charter-main">
+        Agreed criteria for decision rights, documented decisions, transparent escalation, and rapid iterative experimentation when stakes are uncertain.
+      </div>
+      <div class="panel-recommend">
+        Panel: Define which decisions require consensus and which can be made by delegated roles. Periodically review these guidelines as the team matures.
+      </div>
+    </div>
     <div class="footer-brand">
-      Canvas generated with contributions from the Starbucks ELT and expert panel, powered by the Black House team maturity framework.
+      Canvas created with Starbucks ELT and expert panel, following Black House maturity principles.
     </div>
   </div>
 </body>
